Fixed issue where after decider re-connecting, their new socket id was not cached, preventing them from seeing new phases. Fixed non-secure images loading in all SASS.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -399,7 +399,7 @@ input.post-button {
 			background-size: 60px 60px;
 			background-position: 3px center;
 			background-repeat: no-repeat;
-			background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
+			background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
 
 			.coins {
 		    position: relative;
@@ -494,7 +494,7 @@ input.post-button {
 				background-size: 50px 50px;
 				background-position: 3px center;
 				background-repeat: no-repeat;
-				background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
+				background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/layout/coin_stroke.png");
 			}
 			&#btn-cancel {
 				background-color: $orange-dark;
@@ -521,7 +521,7 @@ input.post-button {
 					width: 64px;
 					height: 64px;
 					background-repeat: no-repeat;
-					background-image: url("http://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,w_64/v1490979430/at-stake/layout/icon-yourcoins.svg");
+					background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,w_64/v1490979430/at-stake/layout/icon-yourcoins.svg");
 				}
 			}
 			&:not(#reward-icon) {
