--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -72,7 +72,7 @@
                 <span id="progress" class="phase-path"></span>
 
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/meet.svg' width=23 height=23}}} --}}<span>meet</span></div>
-                <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/brainstorm.svg' width=23 height=23}}} --}}<span>brainstorm</span></div>
+                <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/brainstorm.svg' width=23 height=23}}} --}}<span>think</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/pitch.svg' width=23 height=23}}} --}}<span>pitch</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/deliberate.svg' width=23 height=23}}} --}}<span>deliberate</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/layout/grandstand.svg' width=23 height=23}}} --}}<span>double-down</span></div>
