Fix for issue of timer not showing for players who were decider in prior round.

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -515,7 +515,7 @@ socketEvents = function(eventId, eventData) {
             if(clockInterval)
                 clearInterval(clockInterval);
 
-            if(countdownAnim)
+            if(countdownAnim && countdownAnim.path !== undefined)
                 countdownAnim.destroy();
                    
             var secondsLeft = eventData.duration; 
