Fix for a subsequent deciding player sent to the start of the phase while others remain on ‘waiting’ modal, if deciding player refreshes or reconnects. Fix for decider sometimes being sent to a “blank” login screen after reconnect, and sometimes also seeing server disconnect message and being stuck.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -358,9 +358,8 @@
 			    modalSelector.clone().appendTo(modalSelector.parent());
 
 			  // If modal has 'wait' mode enabled, open only if current countdown is over
-		    if(modalSelector.data('wait') === true) {
+		    if(modalSelector.data('wait') === true)
 		    	if(timerActive) return;
-		    }
 
 		  }
 
