--- a/templates/partials/shared/deliberate.hbs
+++ b/templates/partials/shared/deliberate.hbs
@@ -11,7 +11,7 @@
 		}}
 
 		{{> component/instructions 
-				heading="Read the revealed round question"
+				heading="Listen to the Decider"
 				body='"We will take 90 seconds to talk about your proposals. This will be an open discussion, with the decider kicking things off"'
 		}}
 
@@ -36,7 +36,7 @@
 		}}
 
 		{{> component/instructions 
-				heading="Read the revealed round question"
+				heading="Listen to the Decider"
 				body='"Any player may ask any other player for details about their proposal, offer counter arguments, or ask for changes at any time."'
 		}}
 
@@ -61,7 +61,7 @@
 		}}
 
 		{{> component/instructions 
-				heading="Read the revealed round question"
+				heading="Listen to the Decider"
 				body='"Your objective is to get your proposal chosen by the decider and/or have your agenda items incorporated into the winning proposal"'
 		}}
 
@@ -138,7 +138,7 @@
 		}}
 
 		{{> component/instructions 
-				heading="Read the revealed round question"
+				heading="Time's up! Stop speaking"
 				body=(combine 'If you feel like you didn\'t get a word in or have more to say, you can buy ' config.doubledownSeconds ' second blocks of uninterupted talking time in the next phase!')
 		}}
 
