--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -68,7 +68,7 @@
       <div id="share_code"> 
         <h1>Share Your Room Code</h1>
         <h1 class="access-code"></h1>
-        <p>Share this 4 digit code with players. Once at least 3 players have joined, press the start button to play</p>
+        <p>Share this 4 digit code with players. Once at least 3 players have joined, press play to begin</p>
       </div>
 
       <div class="col-sm-12 player-grid">
