fix timer and next buttons update deciding screens and make certain modals not clickable css fixes

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -119,6 +119,17 @@
 		}
 		
 	}
+
+	body .speech {
+	  // "Next buttons"
+	  button {
+		  &.timer {
+		  	&:before {
+				  left: 103px;
+				}
+		  }
+		}
+	}
 	
 }
 
