--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -97,6 +97,7 @@
 		// margin-bottom: 7px;
 		cursor: pointer;
 		color: white;
+		outline: none;
 	}
 
 	color: white;
@@ -201,6 +202,10 @@
 		@at-root .form {
 			min-height: 0px;
 		}
+
+	}
+
+	&.role {
 
 	}
 }
@@ -451,6 +456,22 @@ input.post-button {
 
 	}
 
+	&.decider {
+		.inner {
+			padding: 8px;
+		}
+		.role {
+			#btn_yes, #btn_no {
+				* {
+					margin: 0px;
+					font-size: 20px;
+					font-family: AvenirNext-Bold;
+
+				}
+			}
+		}
+	}
+
 	.coins {
     position: relative;
 		float: left;   
@@ -476,12 +497,14 @@ input.post-button {
 	  background-color: $turquoise-dark;
 		border: white 3px solid;
 		color: white;
+		padding: 8px;
 
 		.player-logo {
 
 			margin: 10px auto;
 			height: 60px;
 			border-radius: 30px;
+
 
 			&#btn-more-time {
 				span {
@@ -510,16 +533,18 @@ input.post-button {
 			font-size: 20px;
 			font-family: $header-type;
 			margin: 10px auto;
-			height: 60px;
-
+			height: 48px;
+			background-repeat: no-repeat;
+			background-position: 40px 0px;
+		  background-size: 48px 48px;
 			background-color: $aquamarine;
 
 			&#reward-icon {
 				.coins {
 					margin-top: -1%;
 					padding-top: 7%;
-					width: 64px;
-					height: 64px;
+					width: 48px;
+					height: 48px;
 					background-repeat: no-repeat;
 					background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,w_64/v1490979430/at-stake/layout/icon-yourcoins.svg");
 				}
@@ -527,7 +552,7 @@ input.post-button {
 			&:not(#reward-icon) {
 				.coins {
 					padding-top: 40px;
-					padding-left: 9px;
+					width: 48px;
 				}
 			}
 
@@ -549,8 +574,9 @@ input.post-button {
 			.info {
 		    position: relative;
 		    float: right;
-		    width: 85%;
-		    margin-top:10px;
+		    width: 80%;
+		    margin-top:4px;
+		    height: 40px;
 		    font-family: AvenirNext-Bold;
 			}
 		
@@ -772,7 +798,6 @@ blockquote.speech {
 
 }
 .speech {
-
   // "Next buttons"
   button {
     position: absolute;
@@ -811,7 +836,6 @@ blockquote.speech {
 
   }
 }
-
 
 .timer_wrap {
 	button {
