--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -392,7 +392,7 @@
 	        }, modalDuration*1000);
 	    }
 	    
-	    $('#overlay .inner-modal .post-button').click(function(evt) {
+	    $('#overlay .inner-modal:not(.player) .post-button').click(function(evt) {
 
 	        // $('#gameContent').removeClass('blur');
 	        $('#overlay').empty();
