--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -126,8 +126,8 @@
 						<h2>{{this}}</h2>
 
 						{{#each ../../players}}
-					    <div id="player-{{icon}}" class="post-button submit pitch player-logo player-box">
-						    <div class="coins">{{coins}}</div>
+					    <div id="player-{{icon}}" class="post-button submit pitch player-logo player-box" style="cursor:default;">
+						    <div class="coins"></div>
 							  <div class="info">
 								  <h1>{{username}}</h1>
 							    <h2>{{role.title}}</h2>
