--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -17,7 +17,7 @@
 
 				{{#each players}}
 			    <button id="player-{{icon}}" class="post-button submit player-box player-logo btn" data-event="game:proposal_selected" data-package='{{uid}}' data-keep_enabled="true" data-autohide="true" type="submit" name="submit">
-				    <div class="coins">{{coins}}</div>
+				    <div class="coins"></div>
 					  <div class="info">
 						  <h1>{{username}}</h1>
 					    <h2>{{role.title}}</h2>
@@ -36,8 +36,8 @@
 				<h2>Whoever wins receive all the coins in the coin pot!</h2>
 
 				{{#each players}}
-			    <div id="player-{{icon}}" class="post-button submit player-box player-logo btn">
-				    <div class="coins">{{coins}}</div>
+			    <div id="player-{{icon}}" class="post-button submit player-box player-logo btn" style="cursor:default;">
+				    <div class="coins"></div>
 					  <div class="info">
 						  <h1>{{username}}</h1>
 					    <h2>{{role.title}}</h2>
