Revert "Started on timer layout fixes."
This reverts commit 775ee757fdd43763c04486e51debe6d1b3e7ea19.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -8,13 +8,13 @@
         <title>@Stake</title>
         <meta name="description" content="@Stake is an online and mobile role-playing game that fosters democracy, empathy, and creative problem solving for civic issues.">
         <meta name="author" content="Engagement Lab at Emerson College">
-        <meta name="theme-color" content="#00dcba">
+        <meta name="theme-color" content="#e90048">
         
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         {{else}}
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {{/ifeq}}
         {{!-- Open Graph --}}
         {{!-- <meta property="og:image" content="http://res.cloudinary.com/engagement-lab-home/image/upload/v1455896685/site/about/logo_color.png" /> --}}
