add sounds (not implement) fix room code input placeholder text

--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -33,7 +33,7 @@
 <script type="text/javascript" src="/at-stake-socket/socket.io.js"></script>
 
 {{!-- Sound --}}
-{{!-- <script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script> --}}
+<script type="text/javascript" src="/bower_components/ion-sound/js/ion.sound.js"></script>
 
 {{!-- Glide javascript --}}
 <script type="text/javascript" src="/bower_components/glidejs/dist/glide.js"></script>
