--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -264,11 +264,11 @@ socketEvents = function(eventId, eventData) {
 
                 $('#btn-close-role-card').on('click', function(evt) {
                     roleCardOpenClose(false);
-                    ion.sound.play("button_tiny");
+                    // ion.sound.play("button_tiny");
                 });
                 $('#btn-role-card').on('click', function(evt) {
                     roleCardOpenClose(true);
-                    ion.sound.play("button_tiny");
+                    // ion.sound.play("button_tiny");
                 });
                 
                 $('#gameContent').html(markup).promise().done(function() {
