--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -8,7 +8,7 @@
         <title>@Stake</title>
         <meta name="description" content="@Stake is an online and mobile role-playing game that fosters democracy, empathy, and creative problem solving for civic issues.">
         <meta name="author" content="Engagement Lab at Emerson College">
-        <meta name="theme-color" content="#e90048">
+        <meta name="theme-color" content="#00dcba">
         
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
@@ -72,7 +72,7 @@
                 <span id="progress" class="phase-path"></span>
 
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1492107684/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>meet</span></div>
-                <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>brainstorm</span></div>
+                <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>think</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>pitch</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>deliberate</span></div>
                 <div class="disabled icon">{{!-- {{{cloudinaryUrl 'v1491318245/at-stake/phaseactive.svg' width=23 height=23}}} --}}<span>double-down</span></div>
