--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -7,7 +7,7 @@
 		{{> component/instructions 
 				decider=true
 				heading="Read the text in the blue box outloud"
-				body="Once you have finished speaking the instructions to other players, press next to continue"
+				body="Once you finish speaking the instructions to other players, press next to continue"
 		}}
 
 		{{> component/instructions 
@@ -74,7 +74,7 @@
 		{{> component/instructions 
 				decider=true
 				heading="Read the text in the blue box outloud"
-				body="Once you have finished speaking the instructions to other players, press next to continue."
+				body="Once you finish speaking the instructions to other players, press next to continue."
 		}}
 
 		{{> component/instructions 
