--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -11,8 +11,8 @@
 
 		{{> component/instructions 
 				decider=true
-				heading="read the text in the blue box outloud"
-				body="Once you have finished speaking the instructions to other players, press next to continue"
+				heading="Read the text in the blue box out loud"
+				body="Once you finish speaking the instructions to other players, press next to continue"
 		}}
 
 		{{> component/instructions 
@@ -37,7 +37,7 @@
 			
 			{{> component/instructions 
 					decider=true
-					heading="read the text in the blue box outloud"
+					heading="Read the text in the blue box out loud"
 					body=(combine 'Once ' username ' has introduced themselves, press next to continue')
 			}}
 
@@ -63,7 +63,7 @@
 		
 		{{> component/instructions 
 				decider=true
-				heading="read the text in the blue box outloud"
+				heading="Read the text in the blue box out loud"
 				body="Once everyone has had enough time to review their hidden agenda items, press next to continue."
 		}}
 
