--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -1,46 +1,62 @@
 {{!-- 
 
 * COMPONENT: Timer 
-* @param {Bool} button - Just show timer 'start' button?
-* @param {Bool} next_player - Button shown when timer done advances to next player's turn?
-* @param {Bool} advance - Button shown when timer done advances to next phase? (ignored if 'next_player' is true)
-* @param {Bool} active_player - Show this speech only for active player?
-* @param {Bool} inactive_player - Show this speech only for inactive player?
-* @param {String} body - Speech bubble body text for when 'button' is true
+* @param {Bool} preview - Just show timer 'start' button?
+* @param {Bool} button - Timer is start button for decider?
+* @param {String} body - Speech bubble body text for when 'preview' is true
 
 --}}
+    
+{{!-- SPEECH W/ BUTTON TO START --}}
+{{#ifeq preview true}} 
+    
+  {{!-- CIRCULAR TIMER --}}
+  <div class="timer_wrap {{#ifeq decider true}}decider form{{else}}player{{/ifeq}}">
+      
+        <button 
+        {{#ifeq decider true}}
+          id="btn-next" class="submit" data-event="game:start_timer"
+        {{/ifeq}}>
 
-{{#ifeq button true}}
+          <svg viewBox="0 0 100 100" style="display: block; width: 100%;"><path d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92" stroke="#fff" stroke-width="8" fill-opacity="0"></path><path d="M 50,50 m 0,-46 a 46,46 0 1 1 0,92 a 46,46 0 1 1 0,-92" stroke="#56d5ff" stroke-width="8" fill="#ff3d6b" style="stroke-dasharray: 289.067, 289.067; stroke-dashoffset: -289.00;"></path></svg>
 
-  {{!-- SPEECH W/ BUTTON TO START --}}
-  {{> component/speech
-      body=body
-      decider=true
-      timer=true
-  }}
+          <div class="progressbar-text preview">{{time}}</div>
+
+          <div class="speech">
+          
+            <h1>
+              {{#ifeq decider true}}
+                Start Timer
+              {{else}}
+                Get Ready!
+              {{/ifeq}}
+            </h1>
+
+            <span id="modifier" class="hidden-el" data-hide_next="false"></span>
+            {{#if body}}<p>{{body}}</p>{{/if}}
+          </div>
+
+        </button>
+
+    </div>
 
 {{else}}
-
+  
   {{!-- CIRCULAR TIMER --}}
-  <div class="timer_wrap {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
-    {{#ifeq preview true}} 
-      {{!-- {{#ifeq active_player true}} --}}
-        <div class="timer preview" data-duration="{{time}}"></div>
+  <div class="timer_wrap running {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
 
-        <div class="form decider speech">
-        
-          {{#ifeq next_player true}}
-            <button id="btn-next-player" data-event="game:next_player" class="timer-button submit" style="display:none">next player</button>
-          {{else}}
-            <button id="btn-next" data-event="{{#if advance}}game:start_timer{{else}}game:start_timer{{/if}}" class="timer-button next-step submit">start</button>
-          {{/ifeq}}
-
-          <span id="modifier" class="hidden-el" data-hide_next="false"></span>
-        </div>
-      {{!-- {{/ifeq}} --}}
-    {{else}}
         <div class="timer"></div>
-    {{/ifeq}}
+
+        <div class="speech">
+            <h1>Seconds left</h1>
+
+          {{#ifeq active_player true}}
+            {{#if body_active}}<p>{{body_active}}</p>{{/if}}
+          {{else}}
+            {{#if body}}<p>{{body}}</p>{{/if}}
+          {{/ifeq}}
+        </div>
+
   </div>
 
 {{/ifeq}}
