--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -2,7 +2,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -26,7 +26,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -50,7 +50,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -75,7 +75,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -99,7 +99,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -123,7 +123,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -147,7 +147,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -171,7 +171,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -195,7 +195,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -219,7 +219,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -243,7 +243,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -267,7 +267,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
@@ -291,7 +291,7 @@
 		
 	{{> component/instructions 
 			decider=true
-			heading="read the text in the blue box outloud"
+			heading="Read the text in the blue box out loud"
 			body="Something here"
 	}}
 
