Resolved issue where timer would not show sometimes for new decider in round 2+.

--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -535,8 +535,8 @@ socketEvents = function(eventId, eventData) {
             if(clockInterval)
                 clearInterval(clockInterval);
 
-            if(countdownAnim && countdownAnim.path !== undefined)
-                countdownAnim.destroy();
+            if(countdownAnim)
+                $('.screen .timer').empty();
                    
             var secondsLeft = eventData.duration; 
             startTimer(secondsLeft);
