--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -15,6 +15,7 @@
 
 
 	body .inner-modal .inner .player-box {
+		background-position: 20px 0px;
 		.coins {
 			padding-top: 40px;
 			padding-left: 15px;
@@ -138,6 +139,38 @@
 // For teeny tiny screen heights (iPod)
 @media(max-height: 461px) {
 
+	body .inner-modal .inner .player-box {
+		background-position: 20px 0px;
+		.coins {
+			padding-top: 40px;
+			padding-left: 15px;
+		}
+		.info {
+			width: 70%;
+		}
+	}
+
+	body .speech button.scoreboard:before {
+		left: 157px;
+		bottom: 4px;
+	}
+
+	body #lobby .lobby #tutorial {
+		padding-top: 45%;
+	}
+
+	body .timer_wrap button {
+		right: 40%;
+		bottom: 23%;
+		font-size: 17px;
+
+		&:before {
+			left: 58px;
+			bottom: 5px;
+		}
+	}
+
+
 	// Fix the login!
 	.player-grid {
 		max-height: 50%;
@@ -151,36 +184,40 @@
 	// Fix that quote!
 	body blockquote.speech {
 		padding: 20px !important;
-		height:200px !important;
+		height:210px !important;
 		h3 {
 			line-height: 1.3;
 			margin: 5px;
 		}
 
 		button {
-			bottom: 60px;
+			bottom: 45px;
+			left:65%;
 			&:before {
-				bottom: 6px;
+				bottom: 5px;
 		    left: 60px;
 			}
 
 			&.timer {
-				bottom: 70px;
+				bottom: 50px;
+				left: 120px;
+				right: 0px;
+
 				&:before {
 					bottom: 5px;
-					left: 128px;
+					left: 120px;
 				}
 			}
 		}
 	}
 
-	// Fix those buttons!
-	.decider {
-		button {
-			position: absolute;
-			z-index: 4000;
-			left: 20%;
-		}
-	}
+	// // Fix those buttons!
+	// .decider:not(.speech), .decider:not(.timer_wrap) {
+	// 	button {
+	// 		position: absolute;
+	// 		z-index: 4000;
+	// 		left: 20%;
+	// 	}
+	// }
 
 }
