remove remaining coins

--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -144,7 +144,7 @@
 						<h2>Your agenda item <span class="item">{{this}}</span> is included in the winning proposal. You win {{agendaReward ../../config.rewardAmounts @index}} coins</h2>
 
 					    <div id="reward-icon" class="pitch player-box">
-						    <div class="coins">{{agendaReward ../../config.rewardAmounts @index}}</div>
+						    <div class="coins"></div>
 							  <div class="info">
 								  <h1>{{../username}}</h1>
 							    <h2>{{../role.title}}</h2>
@@ -160,7 +160,7 @@
 						<h2>Your agenda item <span class="item">{{this}}</span> was not included in the winning proposal</h2>
 
 					    <div id="player-{{../icon}}" class="pitch player-logo player-box">
-						    <div class="coins">{{../coins}}</div>
+						    <div class="coins"></div>
 							  <div class="info">
 								  <h1>{{../username}}</h1>
 							    <h2>{{../role.title}}</h2>
