Added basic debrief phase (layout not yet 100% done). Added modal that shows whenever game is ending and redirecting player back to login.

--- a/templates/partials/component/speech.hbs
+++ b/templates/partials/component/speech.hbs
@@ -24,7 +24,11 @@
 		  {{#ifeq timer true}}
 		    <button class="next-step timer submit" data-event="{{nextEvent this}}">Start Timer</button>
 		  {{else}}
-		    <button class="next-step submit" data-event="{{nextEvent this}}">next</button>
+			  {{#ifeq exit true}}
+			    <button class="next-step submit" data-event="game:exit">exit game</button>
+		    {{else}}
+			    <button class="next-step submit" data-event="{{nextEvent this}}">next</button>
+			  {{/ifeq}}
 		  {{/ifeq}}
 
 	  {{/ifeq}}
