--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -53,6 +53,12 @@
 		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Next Round</button>
 			</div>
 
+		{{else}}
+		
+			<div class="form decider speech">
+		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_phase">Go to Next Round</button>
+			</div>
+
 		{{/ifnoteq}}
 
 	</div>
