--- a/templates/partials/player/gameended.hbs
+++ b/templates/partials/player/gameended.hbs
@@ -1,7 +1,10 @@
-<section class="row">
-          
-    <div class="col-lg-12 game-message">
-        <span>game was disconnected!</span>
-    </div>
-
-</section>
+<div class="screen" style="display:block">
+	<div class="modal inner-modal">
+		<div class="inner">
+		
+			<h1>The game is ending!</h1>
+			<h2>Thanks for playing! You are being brought back to the login screen....</h2>
+			
+	  </div>
+	</div>
+</div>
